# SHE_Positive-preserving_Simulation

./: .gitignore  LICENSE  README.md  demo.sh  msSupDxDt.npz  pyproject.toml  she-sim-config.yaml
src/: laplacian.py  main.py  noise.py  plot_3d_simulation.py  solver.py
